# tetris

./: CMakeLists.txt  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  nexttetrisbox.cpp  nexttetrisbox.h  readme  resource.qrc  test_tetris.cpp  tetris.cpp  tetris.h  tetrisbox.cpp  tetrisbox.h
Test/: CMakeLists.txt  tst_test_tetris.cpp
